# home-assistant-culiplan-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: tests.yml  validate.yml
custom_components/culiplan/: __init__.py  api.py  application_credentials.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  helpers.py  icons.json  llm_api.py  manifest.json  quality_scale.yaml  sensor.py  strings.json  todo.py
custom_components/culiplan/translations/: en.json
tests/: __init__.py  conftest.py
tests/components/: __init__.py
tests/components/culiplan/: test_api.py  test_application_credentials.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_entities.py  test_helpers.py  test_init.py  test_llm_api.py
